Add invert buttons setting

--- a/settings/index.html
+++ b/settings/index.html
@@ -22,7 +22,7 @@
 <body>
     <h1>Tuya cloud Settings</h1>
     <fieldset>
-        <legend>Cloud settings</legend>
+        <legend>Authentication settings</legend>
         <div class="field row">
             <label for="username">Username</label>
             <input id="username" type="text" value="" />
@@ -42,7 +42,7 @@
         <h2>Tuya cloud Settings</h2>
         <div class="field row">
             <label for="colormap">Hue colormap</label>
-            <input id="colormap" type="text" value=""/>
+            <input id="colormap" type="text" value="" />
         </div>
         <div class="field row">
             <button id="save" class="left">Save</button>
@@ -59,7 +59,7 @@
             var passwordElement = document.getElementById('password');
             var countrycodeElement = document.getElementById('countrycode');
             var businessElement = document.getElementById('business');
-            var colormapElement = document.getElementById('colormap');
+            var colormapElement = document.getElementById('colormap'); 
             var saveElement = document.getElementById('save');
             var reconnectElement = document.getElementById('reconnect');
 
