Fix reconnect error

--- a/settings/index.html
+++ b/settings/index.html
@@ -36,7 +36,7 @@
             <input id="countrycode" type="text" value="" />
         </div>
         <div class="field row">
-            <label for="business">Business</label>
+            <label for="business">Business (same as smartphone app)</label>
             <select id="business"></select>
         </div>
         <h2>Tuya cloud Settings</h2>
