--- a/settings/index.html
+++ b/settings/index.html
@@ -139,20 +139,20 @@
                 if (!password || password.length === 0) {
                     return Homey.alert(Homey.__("settings.password") +" "+ Homey.__("settings.isrequired") );
                 }
-                if(apiToUse !=="legacy")
-                if (!appid || appid.length === 0) {
-                    return Homey.alert(Homey.__("settings.appid") +" "+ Homey.__("settings.isrequired") );
-                }                
-                if (!appsecret || appsecret.length === 0) {
-                    return Homey.alert(Homey.__("settings.appsecret") +" "+ Homey.__("settings.isrequired") );
-                }    
-                if (!countrycode || countrycode.length === 0) {
-                    return Homey.alert(Homey.__("settings.countrycode") +" "+ Homey.__("settings.isrequired") );
-                } 
-                if (!business || business.length === 0) {
-                    return Homey.alert(Homey.__("settings.business") +" "+ Homey.__("settings.isrequired") );
-                } 
-
+                if (apiToUse !== "legacy") {
+                    if (!appid || appid.length === 0) {
+                        return Homey.alert(Homey.__("settings.appid") + " " + Homey.__("settings.isrequired"));
+                    }
+                    if (!appsecret || appsecret.length === 0) {
+                        return Homey.alert(Homey.__("settings.appsecret") + " " + Homey.__("settings.isrequired"));
+                    }
+                    if (!countrycode || countrycode.length === 0) {
+                        return Homey.alert(Homey.__("settings.countrycode") + " " + Homey.__("settings.isrequired"));
+                    }
+                    if (!business || business.length === 0) {
+                        return Homey.alert(Homey.__("settings.business") + " " + Homey.__("settings.isrequired"));
+                    }
+                }
                 Homey.set('username', username, function (err) {
                     if (err) return Homey.alert(err);
                 });
