fix not finding contact sensor

--- a/settings/index.html
+++ b/settings/index.html
@@ -36,7 +36,8 @@
             <input id="password" type="password" value="" />
         </div>
         <div class="field row">
-            <label for="appid"><span data-i18n="settings.appid"><a target="_blank" href="https://community.homey.app/t/app-pro-tuya-cloud/21313">https://community.homey.app/t/app-pro-tuya-cloud/21313</a></label>
+            <label for="appid"><span data-i18n="settings.appid"></span></label>
+            <label for="appid"></label><a target="_blank" href="https://community.homey.app/t/app-pro-tuya-cloud/21313">https://community.homey.app/t/app-pro-tuya-cloud/21313</a></label>
             <input id="appid" type="text" value="" />
         </div>
         <div class="field row">
